[tool.poetry]
name = "aitakeover"
version = "0.1.0"
description = "Eavesdrop on two AGI's on how they want to take over the world"
authors = ["Manuel Pasieka <contact@manuelpasieka.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.8.0"
streamlit-pydantic = "^0.5.0"
openai = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
